[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topo"
version = "0.1.0"
description = "Topology-aware diffusion-based flow field generation for 3D instance segmentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CellMap Team" },
]
keywords = ["instance-segmentation", "diffusion", "flow-fields", "topology", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest", "torch>=2.0"]

[project.urls]
Homepage = "https://github.com/janelia-cellmap/topo"
