[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topo"
version = "0.1.0"
description = "Topology-aware diffusion-based flow field generation for 3D instance segmentation"
readme = "README.md"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.9"
authors = [
    {  email = "zouinkhim@hhmi.org", name = "Marwan Zouinkhi" },
]
keywords = ["instance-segmentation", "diffusion", "flow-fields", "topology", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest", "torch>=2.0"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autoapi",
    "myst-nb",
    "jupytext",
    "ipykernel",
    "nbconvert",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/janelia-cellmap/topo"
